--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -1,6 +1,6 @@
 %ul.nav.pull-right
-  - actions(:root).each do |action|
-    %li= link_to wording_for(:menu, action), { :action => action.action_name, :controller => 'rails_admin/main' }, :class => 'pjax'
+  %li= link_to '在线用户', main_app.online_statistics_path
+  %li= link_to '控制板', '/admin/', :class => 'pjax'
   - if main_app_root_path = (main_app.root_path rescue false)
     %li= link_to t('admin.home.name').capitalize, main_app_root_path
   - if _current_user
