--- a/app/views/layouts/rails_admin/pjax.html.haml
+++ b/app/views/layouts/rails_admin/pjax.html.haml
@@ -1,4 +1,4 @@
-- if @abstract_model
+- if @page_name
   :javascript
     $('.nav.nav-list li.active').removeClass('active');
     $('.nav.nav-list li[data-model="#{@abstract_model.to_param}"]').addClass('active');
