--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -1,4 +1,5 @@
 %ul.nav.pull-right
+  %li= link_to '提现审核', main_app.withdraw_statistics_path
   %li= link_to '在线用户', main_app.online_statistics_path
   %li= link_to '控制板', '/admin/', :class => 'pjax'
   - if main_app_root_path = (main_app.root_path rescue false)
