--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -6,6 +6,10 @@
     = csrf_meta_tag
     = stylesheet_link_tag "rails_admin/rails_admin.css", :media => :all
     = javascript_include_tag "rails_admin/rails_admin.js"
+    = javascript_include_tag "application"
+    :javascript
+      window.pusher = new Pusher("#{Pusher.key}"),
+      App.channel = pusher.subscribe("notify_#{current_user.id}");
   %body.rails_admin
     #loading.label.label-warning{:style => 'display:none; position:fixed; right:20px; bottom:20px; z-index:100000'} Loading...
     .navbar.navbar-fixed-top
@@ -24,3 +28,5 @@
         .span9
           .row-fluid
             .content{:'data-pjax-container' => true}= render :template => 'layouts/rails_admin/pjax'
+            
+    
