--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -1,4 +1,5 @@
 %ul.nav.pull-right
+  %li= link_to '系统通知', main_app.sys_notify_statistics_path
   %li= link_to '每周精选', main_app.sift_statistics_path
   %li= link_to '提现审核', main_app.withdraw_statistics_path
   %li= link_to '在线用户', main_app.online_statistics_path
