--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -7,6 +7,7 @@
 /***  Variables  ***/
 
 @import "rails_admin/base/variables";
+@import "rails_admin/base/fontawesome";
 @import "rails_admin/themes/<%= theme %>/variables";
 @import "rails_admin/custom/variables";
 
@@ -27,7 +28,7 @@
 /***  RailsAdmin Theming  ***/
 
 @import "rails_admin/base/theming";
-@import "rails_admin/themes/<%= theme %>/theming";
+
 @import "rails_admin/custom/theming";
 
 
