--- a/app/assets/javascripts/rails_admin/rails_admin.js.erb
+++ b/app/assets/javascripts/rails_admin/rails_admin.js.erb
@@ -17,7 +17,7 @@
   require_asset 'rails_admin/jquery.pjax'
   require_asset 'jquery_nested_form'
   require_asset 'rails_admin/ra.nested-form-hooks'
-  # require_asset 'bootstrap'
+  require_asset 'bootstrap'
   require_asset 'rails_admin/ra.widgets'
   require_asset 'rails_admin/ui'
   require_asset "rails_admin/themes/#{theme}/ui"
