add group pending

--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -4,6 +4,7 @@
   %li= link_to '系统通知', main_app.sys_notify_statistics_path
   %li= link_to '每周精选', main_app.sift_statistics_path
   %li= link_to '提现审核', main_app.withdraw_statistics_path
+  %li= link_to '站点审核', main_app.group_pending_statistics_path
   %li= link_to '在线用户', main_app.online_statistics_path
   %li= link_to '用户技能标签', main_app.fake_tag_statistics_path
   %li= link_to '小号管理', main_app.fake_statistics_path
