--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -1,14 +1,23 @@
 %ul.nav.pull-right
   %li= link_to '查看统计', main_app.statistics_path
-  %li= link_to '交易历史', main_app.trade_histroy_statistics_path
-  %li= link_to '系统通知', main_app.sys_notify_statistics_path
-  %li= link_to '每周精选', main_app.sift_statistics_path
-  %li= link_to '提现审核', main_app.withdraw_statistics_path
-  %li= link_to '退款审核', main_app.refund_statistics_path
-  %li= link_to '站点审核', main_app.group_pending_statistics_path
   %li= link_to '在线用户', main_app.online_statistics_path
-  %li= link_to '用户技能标签', main_app.fake_tag_statistics_path
-  %li= link_to '小号管理', main_app.fake_statistics_path
+  %li= link_to '每周精选', main_app.sift_statistics_path
+  %li.dropdown
+    %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "javascript:void(0)"}
+      其他操作
+      %b.caret
+    %ul.dropdown-menu
+      %li= link_to '站点审核', main_app.group_pending_statistics_path
+      %li= link_to '系统通知', main_app.sys_notify_statistics_path
+      %li= link_to '撤销屏蔽', main_app.recycle_bin_statistics_path
+      %li.divider
+      %li= link_to '交易历史', main_app.trade_histroy_statistics_path
+      %li= link_to '提现审核', main_app.withdraw_statistics_path
+      %li= link_to '退款审核', main_app.refund_statistics_path
+      %li.divider
+      %li= link_to '用户技能标签', main_app.fake_tag_statistics_path
+      %li= link_to '小号管理', main_app.fake_statistics_path
+
   - if main_app_root_path = (main_app.root_path rescue false)
     %li= link_to t('admin.home.name').capitalize, main_app_root_path
   - if _current_user
