--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -2,6 +2,7 @@
   %li= link_to '查看统计', main_app.statistics_path
   %li= link_to '在线用户', main_app.online_statistics_path
   %li= link_to '每周精选', main_app.sift_statistics_path
+  %li= link_to '首页推荐', main_app.recommend_statistics_path
   %li.dropdown
     %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "javascript:void(0)"}
       其他操作
